Se añade Splash Screen

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Fade Transition for Splash Screen */
+.fade-leave-active {
+  transition: opacity 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.fade-leave-to {
+  opacity: 0;
+}
